--- a/TPwebhamburgueseria/index.html
+++ b/TPwebhamburgueseria/index.html
@@ -24,8 +24,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Muy Menú</a></li>
-            <li><a href="#Locales">Muy Locales</a></li>
-            <li><a href="#Reserva">Muy Reservas</a></li>
+            <li><a href="locales.html">Muy Locales</a></li>
+            <li><a href="contacto.html">Muy Contacto</a></li>
         </ul>
     </nav>
     <h1>
