--- a/TPwebhamburgueseria/locales.html
+++ b/TPwebhamburgueseria/locales.html
@@ -17,20 +17,22 @@
     <link rel="stylesheet" href="styles.css">
     <title>TpHamburgueseria</title>
 </head>
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Muy Menú</a></li>
-            <li><a href="locales.html">Muy Locales</a></li>
-            <li><a href="#Reserva">Muy Reservas</a></li>
-        </ul>
-        <img src="" alt="">
-    </nav>
-    <h2>Muy Locales</h2>
-</header>
+
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Muy Menú</a></li>
+                <li><a href="locales.html">Muy Locales</a></li>
+                <li><a href="contacto.html">Muy Contacto</a></li>
+            </ul>
+            <img src="" alt="">
+        </nav>
+        <h2>Muy Locales</h2>
+    </header>
+
  <div class="flexcontainer">
         <div class="fila">
             <div class="columnafoto">
