--- a/TPwebhamburgueseria/menu.html
+++ b/TPwebhamburgueseria/menu.html
@@ -11,9 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Kanit:ital,wght@1,200&family=DynaPuff&family=Michroma&display=swap"
         rel="stylesheet">
        
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="styles.css">
     <title>TpHamburgueseria</title>
 </head>
@@ -22,8 +22,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Muy Menú</a></li>
-            <li><a href="#Locales">Muy Locales</a></li>
-            <li><a href="#Reserva">Muy Reservas</a></li>
+            <li><a href="locales.html">Muy Locales</a></li>
+            <li><a href="contacto.html">Muy Contacto</a></li>
         </ul>
         <img src="" alt="">
     </nav>
