--- a/TPwebhamburgueseria/contacto.html
+++ b/TPwebhamburgueseria/contacto.html
@@ -23,6 +23,7 @@
 
 <body>
     <header>
+        <img class="logo" src="./images/android-chrome-192x192.png" alt="">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
